--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
- {
+html,body{
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
+
 header {
     background-color:rgba(33, 33, 33, 0.9);
     color:#ffffff;
@@ -11,6 +14,7 @@ header {
     position:relative;
     z-index:5;
 }
+
 h2{
     margin-top: 30px;
     text-align: center;
@@ -98,5 +102,3 @@ header a, a:visited {
   -webkit-animation:move-clouds-back 200s linear infinite;
   animation:move-clouds-back 200s linear infinite;
 }
-
-    
